@@ -1,2 +1,1 @@
---add-opens=java.base/sun.misc=ALL-UNNAMED
 -Dfile.encoding=UTF-8
